--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
+    "name": "Deepak-Jangir/portfolio",
+    "description": "My portfolio",
     "require": {
-        "Deepak-Jangir/portfolio": "1.00"
+        "php": "^5.3.3 || ^7.0"
     }
 }
