--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Deepak-Jangir/portfolio",
+    "name": "deepak-jangir/portfolio",
     "description": "My portfolio",
     "require": {
         "php": "^5.3.3 || ^7.0"
