--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "name": "deepak-jangir/portfolio",
     "description": "My portfolio",
     "require": {
-        "php": "^5.3.3 || ^7.0"
+        "php": ">=5.5.9"
     }
 }
